changed title and added list of travel places

--- a/web_dev/index.html
+++ b/web_dev/index.html
@@ -1,9 +1,33 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>HTML</title>
+	<title>Travels</title>
 </head>
 <body>
-	<h1>This is fun!</h1>
+	<h1>Where to next?</h1>
+	<p>There are so <em>many</em> places to go and see. So what is on your list?</p>
+	
+	<h2> List of places and things to do</h2>
+	<ul>
+		<li><strong>Tokyo</strong> <ol> <li>See the cherry blossoms</li>
+			<li>Eat all the delicious ramen</li>
+			<li>Go shopping in Harajuku</li>
+			</ol> </li>
+
+		<li><strong>Vienna</strong> <ol>
+			<li>Visit the palaces and museums</li>
+			<li>Attend a Mozart concert</li>
+			<li>Enjoy Viennese wine or beer</li>
+			</ol></li>
+		
+	</ul>
+
+	<h3>Here are some links to get you started</h3>
+	<ul>
+		<li><a href="https://www.tripadvisor.com/Attractions-g298184-Activities-Tokyo_Tokyo_Prefecture_Kanto.html">Tokyo</a></li>
+		<li><a href="http://www.lonelyplanet.com/austria/vienna/things-to-do/top-things-to-do-in-vienna">Vienna</a></li>
+	</ul>
+
 
 </body>
 </html>
