--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -4,7 +4,7 @@
     <title>Table Practice</title>
   </head>
   <body>
-    <table border =1>
+    <table border = 1>
     	<tr>
     		<th>Date</th>
     		<th>Place</th>
@@ -22,6 +22,29 @@
     	</tr>
     	<tr>
     		<td>6/3/16</td>
+    		<td>Cermak Produce</td>
+    		<td>$15</td>
+    	</tr>
+    </table>
+    <br>
+    <br>
+     <table border = 1>
+    	<tr>
+    		<th>Date</th>
+    		<th>Place</th>
+    		<th>Money</th>
+    	</tr>
+    	<tr>
+    		<td>6/1/16</td>
+    		<td>Trader Joe's</td>
+    		<td>$20</td>
+    	</tr>
+    	 <tr>
+    		<td rowspan="2">6/2/16</td>
+    		<td>&nbsp;</td>
+    		<td>$100</td>
+    	</tr>
+    	<tr>
     		<td>Cermak Produce</td>
     		<td>$15</td>
     	</tr>
