Add inter page navigation

--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -8,6 +8,7 @@
   <ul>
     <li><a href="contact.html">Contact us</a></li>
     <li><a href="product_details.html">See our products!</a></li>
+    <li><a href="legal/waiver.html">Give up your right to complain!</a></li>
   </ul>
 </nav>
 <p>Welcome to the official web site of Moon Bootz, the boots that get you high!</p>
