--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -10,5 +10,8 @@
   <li>Leap over chasms!</li>
   <li>Land gently from any fall... probably!</li>
 </ul>
+<footer>
+  Copyright <a href="index.html">Moon Bootz LTD</a> 2016
+</footer>
 </body>
 </html>
