--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -10,5 +10,8 @@
   <li>e-mail</li>
   <li>model and size of the moon bootz product that you use</li>
 </ul>
+<footer>
+  Copyright <a href="index.html">Moon Bootz LTD</a> 2016
+</footer>
 </body>
 </html>
