--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -5,5 +5,8 @@
 </head>
 <body>
   <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
+<footer>
+  Copyright <a href="../index.html">Moon Bootz LTD</a> 2016
+</footer>
 </body>
 </html>
