Added snazzy images

--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -10,6 +10,9 @@
   <li>Leap over chasms!</li>
   <li>Land gently from any fall... probably!</li>
 </ul>
+
+<img src="images/moon_bootz.jpg" alt="Moon Bootz" />
+
 <footer>
   Copyright <a href="index.html">Moon Bootz LTD</a> 2016
 </footer>
