Add demonstration of colspan and rowspan

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -26,5 +26,26 @@
     <td>Female</td>
   </tr>
 </table>
+
+<table border=1>
+  <tr>
+    <th>Name</th>
+    <th>Date of birth</th>
+    <th>Gender</th>
+  </tr>
+  <tr>
+    <td>Josh</td>
+    <td colspan="2">March 21</td>
+  </tr>
+  <tr>
+    <td>Gaby</td>
+    <td rowspan="2">May 1</td>
+    <td>Female</td>
+  </tr>
+  <tr>
+    <td>Sarah</td>
+    <td>Female</td>
+  </tr>
+</table>
 </body>
 </html>
