add smoothie recipe table

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -21,5 +21,29 @@
 		<td>Red ball</td>
 	</tr>
 </table>
+
+<br>
+
+<table border=1>
+	<tr>
+		<th>Strawberry Double Banana</th>
+		<th>Strawberry Basil Lemonade</th>
+		<th>Orange Pineapple Banana</th>
+	</tr>
+	<tr>
+		<td colspan=2> Strawberry</td>
+		<td> Orange</td>
+	</tr>
+	<tr>
+		<td rowspan=2> Banana</td>
+		<td> Basil</td>
+		<td> Pineapple </td>
+	</tr>
+	<tr>
+		<td> Lemonade</td>
+		<td> Banana</td>
+	</tr>
+</table>
+
 </body>
 </html>
