Create burrito order form

--- a/html/forms/success.html
+++ b/html/forms/success.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Form submitted</title>
+  <title>YOU DID IT!!!!</title>
 </head>
 <body>
-<h1>Thank you for submitting our form!</h1>
+<h1>HUZZAH YOU'RE THE BEST! THANKS FOR SUBMITTING YOUR ORDER!
 </body>
 </html>
