--- a/html/forms/practice-form.html
+++ b/html/forms/practice-form.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Grocery shopping!</title>
+  <title>Jalapeno</title>
 </head>
 <body>
-<form name="grocery stores" action="success.html" method="post">
-	<div>
-		<label>Name:</label>
-		<input type="text" name="fullname">
-	</div>
-	<div>
-		<label>Email:</label>
-		<input type="email" name="email">
-	</div>
-	<div>
-		<input type="checkbox" name="cb-agree" value="agree">
-		I consent for my information to be shared with the NSA
-	</div>
-	<div>
-		<label>Please choose your local grocery store:</label>
-		<select name="store">
-			<option value="traderjoe">Trader Joe's</option>
-			<option value="shoprite">Shop Rite</option>
-			<option value="wholefoods">Whole Foods</option>
-		</select>
-	</div>
-	<div>
-		<label>What do you typically buy?</label>
-		<textarea name="groceries" rows="10" cols="50">Put your grocery list here!</textarea>
-	</div>
-	<button type="submit">Submit the form!</button>
-</form>
+  <h1>Welcome to Jalapeno!</h1>
+  <form name="jalapeno" action="success.html" method="post">
+    <div>
+      <label>Type of beans in your burrito:</label>
+      <select name="beans">
+        <option value="black">Black</option>
+        <option value="pinto">Pinto</option>
+        <option value="refried">Refried</option>
+      </select>
+    </div>
+    <div>
+      <input type="checkbox" name="guacamole" value="yes">
+      Are you prepared to pay extra for guacamole? IT'S AMAAAAAZING.
+    </div>
+    <div>
+      <label>When do you want your burrito to be ready?</label>
+      <input type="time" name="time">
+    </div>
+    <div>
+      <label>What should we name your order?</label>
+      <input type="text" name="name">
+    </div>
+    <div>
+      <label>What else would you like in your burrito?</label>
+      <br>
+      <textarea name="toppings" rows="10" cols="50">Cheese, lettuce, salsa...?</textarea>
+    </div>
+    <button type="submit">Submit your order!</button>
+  </form>
 </body>
 </html>
