Finished GPS reflection

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -57,3 +57,10 @@
 <footer>Copyright Steve and Josh and Head</footer>
 </body>
 </html>
+
+<!--
+* HTML semantic tags are meant to be the handles by which CSS pulls your web site into shape, a framework around which the site itself is built. I particularly like nav, since a well designed nav toolbar has a big impact on how easy it is to use the web site.
+* I'm not entirely sure I understand what is meant by this, but I think it renders the page from top to bottom.
+* This challenge was the first time I used snippets. I do think I'll use them more later because they seem like a great time saver for some of the longer tags like forms and tables. I wonder, actually, if it's possible to have sublime run simple code when expanding the snippet - so that you could make a snippet that would, for example, output a table of the supplied dimensions.
+* The hardest thing about this lesson was probably the semantic tags. I imagine I'll just have to learn the proper practices of using them by doing so repeatedly and getting corrected when I'm wrong.
+-->
